# modorganizer-basic_games

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  README.md  __init__.py  basic_game.py  basic_game_ini.py  basic_games_en.ts  eadesktop_utils.py  epic_utils.py  game_template.ini  gog_utils.py  metadata.json  origin_utils.py  plugin-requirements.txt  pyproject.toml  setup.cfg  steam_utils.py  vcpkg.json
.github/workflows/: build.yml  linters.yml
basic_features/: __init__.py  basic_local_savegames.py  basic_mod_data_checker.py  basic_save_game_info.py  utils.py
basic_games/: __init__.py  basic_game.py  basic_game_ini.py
basic_games/basic_features/: __init__.py  basic_local_savegames.py
basic_games/games/: game_assettocorsa.py  game_cyberpunk2077.py  game_daggerfallunity.py  game_dao.py  game_darksouls.py  game_f123.py  game_kingdomcomedeliverance.py  game_masterduel.py  game_metalgearsolid2mc.py  game_nierautomata.py  game_sims4.py  game_starwars-empire-at-war-foc.py  game_subnautica.py  game_tdu.py  game_thebindingofisaacrebirth.py  game_thps3.py  game_trainsimulator.py  game_valheim.py  game_valkyriachronicles.py  game_witcher2.py  game_xplane11.py
basic_games/games/quarantine/: game_masseffectlegendary.py
basic_games/games/stalkeranomaly/: XRMath.py  XRNET.py
games/: finalfantasy7remake.py  game_arkhamcity.py  game_assettocorsa.py  game_baldursgate3.py  game_beamng.py  game_beatsaber.py  game_blackandwhite2.py  game_bladeandsorcery.py  game_borderlands1.py  game_cassettebeasts.py  game_control.py  game_crimeboss.py  game_crusaderkings3.py  game_cyberpunk2077.py  game_da2.py  game_daggerfallunity.py  game_dao.py  game_darkestdungeon.py  game_darkmessiahofmightandmagic.py  game_darksouls.py  game_darksouls2sotfs.py  game_dispatch.py  game_divinityoriginalsin.py  game_divinityoriginalsinee.py  game_dragonsdogmadarkarisen.py  game_dungeonsiege1.py  game_dungeonsiege2.py  game_emuvr.py  game_f123.py  game_fallout2.py  game_fallout76.py  game_fantasylifei.py  game_finalfantasy7rebirth.py  game_finalfantasy7remake.py  game_gta-3-de.py  game_gta-san-andreas-de.py  game_gta-vice-city-de.py  game_hitman3.py  game_jurassic-world-evolution-2.py  game_karrynsprison.py  (+81 more)
games/baldursgate3/: bg3_data_archives.py  bg3_data_checker.py  bg3_data_content.py  bg3_file_mapper.py  bg3_game_plugin.py  bg3_script_extender.py  bg3_utils.py  lslib_retriever.py  pak_parser.py
games/baldursgate3/plugins/: __init__.py  bg3_tool_plugin.py  check_for_lslib_updates_plugin.py  convert_jsons_to_yaml_plugin.py  icons.py  reparse_pak_metadata_plugin.py
games/oblivion_remaster/: constants.py  game_plugins.py  mod_data_checker.py  mod_data_content.py  script_extender.py
games/oblivion_remaster/paks/: model.py  view.py  widget.py
games/oblivion_remaster/ue4ss/: model.py  view.py  widget.py
games/quarantine/: readme.txt
games/stalker2heartofchornobyl/: __init__.py
games/stalker2heartofchornobyl/paks/: __init__.py  model.py  view.py  widget.py
games/stalkeranomaly/: XRIO.py  XRMath.py  XRNET.py  XRObject.py  XRSave.py  __init__.py
games/unreal_tabs/: constants.py
games/unreal_tabs/manage_paks/: model.py  view.py  widget.py
games/unreal_tabs/manage_ue4ss/: model.py  view.py  widget.py
games/yakuza/: yakuza_series.py
pre-commit-hooks/: update-readme-games.jinja  update-readme-games.py
