# note: this file is for local development, currently the file is not used to build
# the plugin
[tool.poetry]
name = "basic-games"
version = "0.1.0"
description = ""
authors = []
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
psutil = "^5.8.0"
vdf = "3.4"
lzokay = "1.1.5"
pyqt6 = "6.7.1"

[tool.poetry.group.dev.dependencies]
mobase-stubs = "^2.5.2"
pyqt6 = "^6.7.1"
pyright = "^1.1.375"
ruff = "^0.5.7"
types-psutil = "^6.0.0.20240621"
poethepoet = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
format-imports = "ruff check --select I basic_games --fix"
format-ruff = "ruff format basic_games"
format.sequence = ["format-imports", "format-ruff"]
lint-ruff = "ruff check basic_games"
lint-ruff-format = "ruff format --check basic_games"
lint-pyright = "pyright basic_games"
lint.sequence = ["lint-ruff", "lint-ruff-format", "lint-pyright"]
lint.ignore_fail = "return_non_zero"

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
extend-select = ["B", "Q", "I"]

[tool.ruff.lint.isort]
known-first-party = ['tas']

[tool.pyright]
exclude = ["lib", "**/.*", "venv"]
typeCheckingMode = "strict"
reportMissingTypeStubs = true
reportMissingModuleSource = false
pythonPlatform = "Windows"
